# competitor-hunter

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  README.zh.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: mcp.json  settings.json
config/: app.yaml.example
docker/: Dockerfile  docker-compose.yml
examples/: analyze.py  test_mcp_client.py
src/competitor_hunter/: cli.py  config.py  main.py
src/competitor_hunter/core/: __init__.py  graph.py  models.py
src/competitor_hunter/infrastructure/browser/: __init__.py  crawler.py
src/competitor_hunter/infrastructure/llm/: __init__.py  extractor.py
src/competitor_hunter/interface/mcp_server/: __init__.py  server.py
tests/: conftest.py  test_crawler.py  test_graph.py
