[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "competitor-hunter"
version = "0.1.0"
description = "Competitor analysis tool using MCP, LangGraph, and Playwright"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["competitor", "analysis", "mcp", "langgraph", "playwright"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "langgraph>=0.1.0",
    "langchain>=0.1.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "html2text>=2024.2.26",
    "aiosqlite>=0.19.0",
    "loguru>=0.7.0",
]

[project.scripts]
competitor-hunter = "competitor_hunter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
]

[tool.poetry]
name = "competitor-hunter"
version = "0.1.0"
description = "Competitor analysis tool using MCP, LangGraph, and Playwright"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mcp = "^0.1.0"
langgraph = "^0.1.0"
langchain = "^0.1.0"
playwright = "^1.40.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
html2text = "^2024.2.26"
aiosqlite = "^0.19.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
ruff = "^0.1.0"
black = "^23.0.0"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

